[gd_scene load_steps=4 format=3 uid="uid://t42fhqlq45d8"]

[ext_resource type="Script" path="res://Scripts/actionText.gd" id="1_38nkd"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_um3fh"]
[ext_resource type="Script" path="res://Scripts/complementary_label.gd" id="3_nwc1w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_um3fh")

[node name="LabelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -53.0
grow_horizontal = 2
grow_vertical = 0

[node name="AcctionLabel" type="RichTextLabel" parent="LabelContainer"]
layout_mode = 2
bbcode_enabled = true
text = "ERROR"
fit_content = true
script = ExtResource("1_38nkd")

[node name="ComplementaryLabel" type="RichTextLabel" parent="LabelContainer"]
layout_mode = 2
bbcode_enabled = true
text = "AAAAAAAAAAAAA"
fit_content = true
script = ExtResource("3_nwc1w")

[node name="Timer" type="Timer" parent="LabelContainer/ComplementaryLabel"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="LabelContainer/ComplementaryLabel/Timer" to="LabelContainer/ComplementaryLabel" method="_on_timer_timeout"]
